<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.there.shouldbe.UserLogin$PlaceholderFragment" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
			<TextView
			    android:id="@+id/usernameTV"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"			    
			    android:text="@string/username" />
			<EditText
			    android:id="@+id/usernameET"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/exampleUsername"  />
		</LinearLayout>
    
    	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/passwordTV"
				android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/password" />
	        <EditText
	            android:id="@+id/passwordET"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/examplePassword" />
	    </LinearLayout>
	    
    	<Button
    	    android:id="@+id/loginButton"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/loginButtonText" />
    	
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical" >
	        <TextView 
	            android:id="@+id/newUserTV"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/newuser" />
    	    <Button 
    	        android:id="@+id/signupButton"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/signup" />
    	</LinearLayout>
	    
    </LinearLayout>

</RelativeLayout>
    