<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/tap_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:onClick="tapLocation"
        android:text="@string/tap_location" />

    <Button
        android:id="@+id/post_wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tap_loc"
        android:layout_below="@+id/tap_loc"
        android:layout_marginTop="67dp"
        android:text="@string/post_wall" 
        android:onClick="postWall"  />

    <Button
        android:id="@+id/twitterfeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/post_wall"
        android:layout_below="@+id/post_wall"
        android:layout_marginTop="60dp"
        android:text="@string/twitter_feed"
        android:onClick="openTwitterFeed" />

</RelativeLayout>